fix my index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h2>my Github page</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perferendis deleniti blanditiis quia iste saepe eveniet eum nemo, minima dolores nostrum sequi aliquam, odit quos architecto, quaerat animi error hic.</p>
+<h1>Hello World!</h1>
+<p>My name is buuug7</p>
