--- a/resume/index.html
+++ b/resume/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>vue-test</title>
+    <title>buuug7's Resume</title>
+    <meta name=keywords content=resume,buuug7-resume,resume-with-vue>
+    <meta name=description content="buuug7's resume">
     <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css>
-    <link href=./static/css/app.d83c824711d90ac32582e2cd41147331.css rel=stylesheet>
+    <link href=./static/css/app.3e083fb11edc0999659f37f15335dfb1.css rel=stylesheet>
 </head>
 <body>
 <div id=app></div>
 <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
 <script type=text/javascript src=./static/js/vendor.d2856aba014361ea7ddf.js></script>
-<script type=text/javascript src=./static/js/app.ee6473c2c9bb59b0062e.js></script>
+<script type=text/javascript src=./static/js/app.ef61ac4c3ac045b8279f.js></script>
 </body>
 </html>
